--- a/files/en-us/mozilla/firefox/experimental_features/index.html
+++ b/files/en-us/mozilla/firefox/experimental_features/index.html
@@ -56,7 +56,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>dom.dialog_element.enabled</code></th>
+   <td colspan="2"><code>dom.dialog_element.enabled</code></td>
   </tr>
  </tbody>
 </table>
@@ -96,7 +96,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>dom.forms.inputmode</code></th>
+   <td colspan="2"><code>dom.forms.inputmode</code></th>
   </tr>
  </tbody>
 </table>
@@ -136,7 +136,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>html5.inert.enabled</code></th>
+   <td colspan="2"><code>html5.inert.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -176,7 +176,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.forms.input-type-search.enabled</code></th>
+   <td colspan="2"><code>layout.forms.input-type-search.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -218,7 +218,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.control-characters.enabled</code> or <code>layout.css.control-characters.visible</code></th>
+   <td colspan="2"><code>layout.css.control-characters.enabled</code> or <code>layout.css.control-characters.visible</code></th>
   </tr>
  </tbody>
 </table>
@@ -259,7 +259,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.initial-letter.enabled</code></th>
+   <td colspan="2"><code>layout.css.initial-letter.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -300,7 +300,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.aspect-ratio-number.enabled</code></th>
+   <td colspan="2"><code>layout.css.aspect-ratio-number.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -340,7 +340,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.backdrop-filter.enabled</code></th>
+   <td colspan="2"><code>layout.css.backdrop-filter.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -380,7 +380,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.fit-content-function.enabled</code></th>
+   <td colspan="2"><code>layout.css.fit-content-function.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -420,7 +420,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.grid-template-masonry-value.enabled</code></th>
+   <td colspan="2"><code>layout.css.grid-template-masonry-value.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -460,7 +460,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2">
+   <td colspan="2">
     <p><code>layout.css.prefers-contrast.enabled</code></p>
    </th>
   </tr>
@@ -502,7 +502,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.math-style.enabled</code></th>
+   <td colspan="2"><code>layout.css.math-style.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -544,7 +544,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.d-property.enabled</code></th>
+   <td colspan="2"><code>layout.css.d-property.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -591,7 +591,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>gfx.offscreencanvas.enabled</code></th>
+   <td colspan="2"><code>gfx.offscreencanvas.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -631,7 +631,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>canvas.hitregions.enabled</code></th>
+   <td colspan="2"><code>canvas.hitregions.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -675,7 +675,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>dom.webgpu.enabled</code></th>
+   <td colspan="2"><code>dom.webgpu.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -717,7 +717,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>media.setsinkid.enabled</code></th>
+   <td colspan="2"><code>media.setsinkid.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -759,7 +759,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>media.setsinkid.enabled</code></th>
+   <td colspan="2"><code>media.setsinkid.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -799,7 +799,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>media.track.enabled</code></th>
+   <td colspan="2"><code>media.track.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -841,7 +841,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code><strong>dom.events.asyncClipboard.clipboardItem</strong></code></th>
+   <td colspan="2"><code><strong>dom.events.asyncClipboard.clipboardItem</strong></code></th>
   </tr>
  </tbody>
 </table>
@@ -881,7 +881,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>dom.events.asyncClipboard.read</code> </th>
+   <td colspan="2"><code>dom.events.asyncClipboard.read</code> </th>
   </tr>
  </tbody>
 </table>
@@ -921,7 +921,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code><strong>dom.security.sanitizer.enabled</strong></code></th>
+   <td colspan="2"><code><strong>dom.security.sanitizer.enabled</strong></code></th>
   </tr>
  </tbody>
 </table>
@@ -961,7 +961,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>dom.media.autoplay.autoplay-policy-api</code></th>
+   <td colspan="2"><code>dom.media.autoplay.autoplay-policy-api</code></th>
   </tr>
  </tbody>
 </table>
@@ -1001,7 +1001,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.getBoxQuads.enabled</code></th>
+   <td colspan="2"><code>layout.css.getBoxQuads.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -1041,7 +1041,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.convertFromNode.enable</code></th>
+   <td colspan="2"><code>layout.css.convertFromNode.enable</code></th>
   </tr>
  </tbody>
 </table>
@@ -1083,7 +1083,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>dom.payments.request.enabled</code> and<br>
+   <td colspan="2"><code>dom.payments.request.enabled</code> and<br>
     <code>dom.payments.request.supportedRegions</code></th>
   </tr>
  </tbody>
@@ -1124,7 +1124,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>layout.css.constructable-stylesheets.enabled</code></th>
+   <td colspan="2"><code>layout.css.constructable-stylesheets.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -1165,7 +1165,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>dom.webshare.enabled</code></th>
+   <td colspan="2"><code>dom.webshare.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -1211,7 +1211,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>media.mediasource.experimental.enabled</code></th>
+   <td colspan="2"><code>media.mediasource.experimental.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -1260,7 +1260,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>image.avif.compliance_strictness</code></th>
+   <td colspan="2"><code>image.avif.compliance_strictness</code></th>
   </tr>
  </tbody>
 </table>
@@ -1300,7 +1300,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2">—</th>
+   <td colspan="2">—</th>
   </tr>
  </tbody>
 </table>
@@ -1340,7 +1340,7 @@ tags:
    </tr>
    <tr>
     <th>Preference name</th>
-    <th colspan="2">image.jxl.enabled</th>
+    <td colspan="2">image.jxl.enabled</th>
    </tr>
   </tbody>
  </table>
@@ -1382,7 +1382,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>security.mixed_content.block_object_subrequest</code></th>
+   <td colspan="2"><code>security.mixed_content.block_object_subrequest</code></th>
   </tr>
  </tbody>
 </table>
@@ -1422,7 +1422,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>security.insecure_connection_text.enabled</code> for normal browsing mode; <code>security.insecure_connection_text.pbmode.enabled</code> for private browsing mode</th>
+   <td colspan="2"><code>security.insecure_connection_text.enabled</code> for normal browsing mode; <code>security.insecure_connection_text.pbmode.enabled</code> for private browsing mode</th>
   </tr>
  </tbody>
 </table>
@@ -1464,7 +1464,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>security.mixed_content.upgrade_display_content</code></th>
+   <td colspan="2"><code>security.mixed_content.upgrade_display_content</code></th>
   </tr>
  </tbody>
 </table>
@@ -1509,7 +1509,7 @@ tags:
    </tr>
    <tr>
     <th>Preference name</th>
-    <th colspan="2"><code>dom.security.featurePolicy.header.enabled</code></th>
+    <td colspan="2"><code>dom.security.featurePolicy.header.enabled</code></th>
    </tr>
   </tbody>
  </table>
@@ -1553,7 +1553,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>devtools.webconsole.input.context</code></th>
+   <td colspan="2"><code>devtools.webconsole.input.context</code></th>
   </tr>
  </tbody>
 </table>
@@ -1593,7 +1593,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2">n/a</th>
+   <td colspan="2">n/a</th>
   </tr>
  </tbody>
 </table>
@@ -1635,7 +1635,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>devtools.netmonitor.features.serverSentEvents</code></th>
+   <td colspan="2"><code>devtools.netmonitor.features.serverSentEvents</code></th>
   </tr>
  </tbody>
 </table>
@@ -1675,7 +1675,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>devtools.inspector.ruleview.inline-compatibility-warning.enabled</code></th>
+   <td colspan="2"><code>devtools.inspector.ruleview.inline-compatibility-warning.enabled</code></th>
   </tr>
  </tbody>
 </table>
@@ -1717,7 +1717,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <th colspan="2"><code>apz.allow_zooming</code> and (on Windows) <code>apz.windows.use_direct_manipulation</code></th>
+   <td colspan="2"><code>apz.allow_zooming</code> and (on Windows) <code>apz.windows.use_direct_manipulation</code></th>
   </tr>
  </tbody>
 </table>
