--- a/files/en-us/mozilla/firefox/releases/36/index.html
+++ b/files/en-us/mozilla/firefox/releases/36/index.html
@@ -145,7 +145,7 @@ tags:
  <li>Implemented global <code>require</code> function to access sdk modules anywhere ({{bug(1070927)}}), using:</li>
 </ul>
 
-<pre>var { require } = Cu.import("resource://gre/modules/commonjs/toolkit/require.js", {});</pre>
+<pre class="brush: none">var { require } = Cu.import("resource://gre/modules/commonjs/toolkit/require.js", {});</pre>
 
 <h4 id="Details">Details</h4>
 
