--- a/files/en-us/mozilla/firefox/releases/5/index.html
+++ b/files/en-us/mozilla/firefox/releases/5/index.html
@@ -99,7 +99,9 @@ tags:
 
 <p>For a guide to updating your add-on for Firefox 5, please see <a href="/en-US/docs/Mozilla/Firefox/Updating_add-ons_for_Firefox_5">Updating add-ons for Firefox 5</a>.</p>
 
-<div class="note"><strong>Note:</strong> Firefox 5 requires that binary components be recompiled, as do all major releases of Firefox. See <a href="/en-US/docs/Mozilla/Developer_guide/Interface_Compatibility#binary_interfaces">Binary Interfaces</a> for details.</div>
+<div class="note">
+  <p><strong>Note:</strong> Firefox 5 requires that binary components be recompiled, as do all major releases of Firefox. See <a href="/en-US/docs/Mozilla/Developer_guide/Interface_Compatibility#binary_interfaces">Binary Interfaces</a> for details.</p>
+</div>
 
 <h3 id="Changes_to_JavaScript_code_modules">Changes to JavaScript code modules</h3>
 
