--- a/files/en-us/mozilla/firefox/releases/6/updating_add-ons/index.html
+++ b/files/en-us/mozilla/firefox/releases/6/updating_add-ons/index.html
@@ -14,7 +14,9 @@ tags:
 
 <p>So you should start by visiting AMO and looking to see if your add-on needs any work done at all.</p>
 
-<div class="note"><strong>Note:</strong> You should still test your add-on on Firefox 6, even if it's been automatically upgraded. There are edge cases that may not be automatically detected.</div>
+<div class="note">
+  <p><strong>Note:</strong> You should still test your add-on on Firefox 6, even if it's been automatically upgraded. There are edge cases that may not be automatically detected.</p>
+</div>
 
 <p>Once you've confirmed that you need to make changes, come on back to this page and read on.</p>
 
