--- a/files/en-us/mozilla/firefox/releases/65/index.html
+++ b/files/en-us/mozilla/firefox/releases/65/index.html
@@ -135,8 +135,7 @@ tags:
 <h4 id="Media_Web_Audio_and_WebRTC">Media, Web Audio, and WebRTC</h4>
 
 <ul>
- <li>The {{domxref("WebRTC API", "WebRTC", "", "1")}} {{domxref("RTCIceCandidateStats")}} dictionary has been updated according to the latest spec changes ({{bug(1324788)}}, {{bug(1489040)}};<br>
-  RTCIceCandidateStats has been updated to the latest spec for more details on exactly what has changed).</li>
+ <li>The {{domxref("WebRTC API", "WebRTC", "", "1")}} {{domxref("RTCIceCandidateStats")}} dictionary has been updated according to the latest spec changes ({{bug(1324788)}}, {{bug(1489040)}}; RTCIceCandidateStats has been updated to the latest spec for more details on exactly what has changed).</li>
  <li>The {{domxref("MediaRecorder")}} <code>pause</code> and <code>resume</code> events (and their corresponding event handler properties — {{domxref("MediaRecorder.onpause")}} and {{domxref("MediaRecorder.onresume")}}) were not previously implemented, even though compatibility tables claimed they had been. They have now been implemented ({{bug(1458538)}}, {{bug(1514016)}}).</li>
 </ul>
 
