--- a/files/en-us/mozilla/firefox/releases/8/index.html
+++ b/files/en-us/mozilla/firefox/releases/8/index.html
@@ -21,7 +21,7 @@ tags:
  <li>Support for the {{ domxref("HTMLElement.accessKeyLabel") }} attribute has been added to all elements.</li>
  <li>The {{ HTMLElement("input") }} and {{ HTMLElement("textarea") }} elements now support the <code>selectionDirection</code> attribute, and their <code>setSelectionRange()</code> methods have been updated to support optionally specifying a direction.</li>
  <li>Most elements now get a focus ring drawn around them if they've been made focusable by using the <code>tabindex</code> attribute and the user then focuses the element.</li>
- <li>In a set of nested {{ HTMLElement("label") }} elements click events do no longer trigger multiple <label> elements, which caused Firefox to stop responding in the past (see {{ bug(646157) }}).</label></li>
+ <li>In a set of nested {{ HTMLElement("label") }} elements click events do no longer trigger multiple &lt;label> elements, which caused Firefox to stop responding in the past (see {{ bug(646157) }}).</li>
 </ul>
 
 <h3 id="DOM">DOM</h3>
