--- a/files/en-us/mozilla/firefox/releases/2/index.html
+++ b/files/en-us/mozilla/firefox/releases/2/index.html
@@ -60,8 +60,7 @@ tags:
  <dt><a href="/en-US/docs/Theme_changes_in_Firefox_2">Theme changes in Firefox 2</a></dt>
  <dd>Discusses the changes needed to update existing themes to work in Firefox 2.</dd>
  <dt>Textbox Improvements (Firefox 2.0.0.1 and higher only)</dt>
- <dd>The <code>&lt;textbox&gt;</code> now has a <code>reset()</code> method to reset the value of the textbox to the default value. The <code>defaultValue</code> property may be used to retrieve and modify the default value of the textbox ({{Bug(312867)}}).</dd>
- <dd>Supports an <code>editor</code> property to get the internal <a href="/en-US/docs/NsIEditor">nsIEditor</a> for the text field ({{Bug(312867)}}).</dd>
+ <dd>The <code>&lt;textbox&gt;</code> now has a <code>reset()</code> method to reset the value of the textbox to the default value. The <code>defaultValue</code> property may be used to retrieve and modify the default value of the textbox ({{Bug(312867)}}). Supports an <code>editor</code> property to get the internal <a href="/en-US/docs/NsIEditor">nsIEditor</a> for the text field ({{Bug(312867)}}).</dd>
 </dl>
 
 <h2 id="New_features_for_end_users">New features for end users</h2>
