--- a/files/en-us/mozilla/firefox/releases/4/the_add-on_bar/index.html
+++ b/files/en-us/mozilla/firefox/releases/4/the_add-on_bar/index.html
@@ -11,8 +11,11 @@ tags:
 ---
 <div>{{FirefoxSidebar}}</div>
 <p>Firefox 4 eliminates the status bar from the bottom of the browser window in favor of a new toolbar located at the bottom of the window. This new toolbar, with the ID "addon-bar", is a standard XUL {{ XULElem("toolbar") }}; add-ons can insert content into it, and the user can drag buttons into it while customizing their toolbars. This is the primary difference between the add-on bar and the old status bar; you can now put any XUL element into it, since it's a standard toolbar.</p>
+
 <div class="note">
- <strong>Note:</strong> For the time being, there is a status bar shim included so that add-ons that expect the status bar to be present will still work.</div>
+ <p><strong>Note:</strong> For the time being, there is a status bar shim included so that add-ons that expect the status bar to be present will still work.</p>
+</div>
+
 <h2 id="Adding_an_element_to_the_add-on_bar">Adding an element to the add-on bar</h2>
 <p>The add-on bar is an XUL toolbar with the ID "addon-bar". The code below locates the most-recently used window and adds a new item to the add-on bar that displays the text "Hello world!" using an XUL {{ XULElem("label") }} element.</p>
 <pre class="brush: js">// Find the most recently used window
@@ -58,15 +61,20 @@ if (firstrun) {
 }
 </pre>
 <h2 id="How_to_use_one_overlay_per_Firefox_version">How to use one overlay per Firefox version</h2>
-<p>Adding support for the add-on bar while staying compatible with Firefox 3.6 and older will require using two overlays.<br>
- The <a href="/en-US/docs/Chrome_Registration">chrome.manifest</a> file can specify which file is used by which Firefox version by using <a href="/en-US/docs/Chrome_Registration#Manifest_flags">manifest flags</a>:</p>
-<pre>overlay chrome://browser/content/browser.xul chrome://myaddon/content/myaddon/overlayold.xul application={ec8030f7-c20a-464f-9b0e-13a3a9e97384} appversion&lt;4.0
+<p>Adding support for the add-on bar while staying compatible with Firefox 3.6 and older will require using two overlays. The <a href="/en-US/docs/Chrome_Registration">chrome.manifest</a> file can specify which file is used by which Firefox version by using <a href="/en-US/docs/Chrome_Registration#Manifest_flags">manifest flags</a>:</p>
+
+<pre class="brush: none">overlay chrome://browser/content/browser.xul chrome://myaddon/content/myaddon/overlayold.xul application={ec8030f7-c20a-464f-9b0e-13a3a9e97384} appversion&lt;4.0
 overlay chrome://browser/content/browser.xul chrome://myaddon/content/myaddon/overlay.xul application={ec8030f7-c20a-464f-9b0e-13a3a9e97384} appversion&gt;=4.0
 </pre>
+
 <p>Note: the appversion has to be at least 2 digits long or it won't work with versions of Gecko before 1.8.0.13 and 1.8.1.5.</p>
+
 <h3 id="Adding_a_button_by_default">Adding a button by default</h3>
+
 <p>See: <a href="/en-US/docs/Code_snippets/Toolbar#Adding_button_by_default">Adding a button by default</a></p>
+
 <h2 id="Appearance_differences">Appearance differences</h2>
+
 <ul>
  <li>Since the browser no longer occupies a large percentage of the bar with status information, the entire area is available for add-ons to use.</li>
  <li>The add-on bar is empty and hidden by default; the user must elect to make it visible.</li>
