--- a/files/en-us/mozilla/firefox/releases/43/index.html
+++ b/files/en-us/mozilla/firefox/releases/43/index.html
@@ -4,8 +4,7 @@ slug: Mozilla/Firefox/Releases/43
 tags:
   - Firefox
 ---
-<div>{{FirefoxSidebar}}</div><p><a href="https://www.mozilla.org/firefox/developer/">To test the latest developer features of Firefox,<br>
- install Firefox Developer Edition</a> Firefox 43 was released on December 15, 2015. This article lists key changes that are useful not only for web developers, but also Firefox and Gecko developers as well as add-on developers.</p>
+<div>{{FirefoxSidebar}}</div><p><a href="https://www.mozilla.org/firefox/developer/">To test the latest developer features of Firefox, install Firefox Developer Edition</a> Firefox 43 was released on December 15, 2015. This article lists key changes that are useful not only for web developers, but also Firefox and Gecko developers as well as add-on developers.</p>
 
 <h2 id="Changes_for_Web_developers">Changes for Web developers</h2>
 
