--- a/files/en-us/mozilla/firefox/releases/44/index.html
+++ b/files/en-us/mozilla/firefox/releases/44/index.html
@@ -6,8 +6,7 @@ tags:
 ---
 <div>{{FirefoxSidebar}}</div>
 
-<p><a href="https://www.mozilla.org/firefox/developer/">To test the latest developer features of Firefox,<br>
- install Firefox Developer Edition</a>Firefox 44 was released on January 26, 2016. This article lists key changes that are useful not only for web developers, but also Firefox and Gecko developers as well as add-on developers.</p>
+<p><a href="https://www.mozilla.org/firefox/developer/">To test the latest developer features of Firefox, install Firefox Developer Edition</a>Firefox 44 was released on January 26, 2016. This article lists key changes that are useful not only for web developers, but also Firefox and Gecko developers as well as add-on developers.</p>
 
 <h2 id="Changes_for_Web_developers">Changes for Web developers</h2>
 
