--- a/files/en-us/mozilla/firefox/releases/45/index.html
+++ b/files/en-us/mozilla/firefox/releases/45/index.html
@@ -6,7 +6,7 @@ tags:
 ---
 <div>{{FirefoxSidebar}}</div>
 
-<p><a>To test the latest developer features of Firefox, install Firefox Developer Edition</a> Firefox 45 was released on March 8, 2016. This article lists key changes that are useful not only for web developers, but also Firefox and Gecko developers as well as add-on developers.</p>
+<p>To test the latest developer features of Firefox, install Firefox Developer Edition Firefox 45 was released on March 8, 2016. This article lists key changes that are useful not only for web developers, but also Firefox and Gecko developers as well as add-on developers.</p>
 
 <h2 id="Changes_for_Web_developers">Changes for Web developers</h2>
 
