--- a/files/en-us/mozilla/firefox/releases/48/index.html
+++ b/files/en-us/mozilla/firefox/releases/48/index.html
@@ -9,8 +9,7 @@ tags:
 ---
 <div>{{FirefoxSidebar}}</div>
 
-<p><a href="https://www.mozilla.org/firefox/developer/">To test the latest developer features of Firefox,<br>
-install Firefox Developer Edition</a> Firefox 48 was released on August 2, 2016. This article lists key changes that are useful not only for web developers, but also Firefox and Gecko developers as well as add-on developers.</p>
+<p><a href="https://www.mozilla.org/firefox/developer/">To test the latest developer features of Firefox, install Firefox Developer Edition</a> Firefox 48 was released on August 2, 2016. This article lists key changes that are useful not only for web developers, but also Firefox and Gecko developers as well as add-on developers.</p>
 
 <h2 id="Changes_for_Web_developers">Changes for Web developers</h2>
 
@@ -145,7 +144,7 @@ install Firefox Developer Edition</a> Firefox 48 was released on August 2, 2016.
 	<li>Several Firefox OS APIs that were erroneously exposed to the Web have now been hidden as they should have been — {{domxref("mozContact")}}, {{domxref("MozContactChangeEvent")}}, {{domxref("navigator.mozContacts")}}, {{domxref("MozPowerManager")}}, {{domxref("MozSettingsEvent")}} (see {{bug("1043562")}}, {{bug("1256414")}}, and {{bug("1256046")}}).</li>
 	<li>Support for UTF-16 has been removed from {{domxref("TextEncoder")}} ({{bug(1257877)}}).</li>
 	<li>{{domxref("RTCStatsReport")}} is now a true <code>maplike</code> interface: in addition to {{domxref("RTCStatsReport.forEach()", "forEach()")}}, {{domxref("RTCStatsReport.get()", "get()")}}, and {{domxref("RTCStatsReport.has()", "has()")}}, the methods {{domxref("RTCStatsReport.entries", "entries()")}}, {{domxref("RTCStatsReport.values", "values()")}}, {{domxref("RTCStatsReport.keys()", "keys()")}}, as well as the {{domxref("RTCStatsReport.size", "size")}} getter have been implemented ({{bug(906986)}}).</li>
-	<li>The {{domxref("Request.cache")}} property has been added allowing to control the <a>cache behavior</a> ({{bug(1120715)}}).</li>
+	<li>The {{domxref("Request.cache")}} property has been added allowing to control the cache behavior ({{bug(1120715)}}).</li>
 	<li>Handling of dead keys on Mac OS X has been changed to work the same as other platforms; they no longer fire a {{event("keypress")}} event when no text is generated when the focused element isn't editable (when the focused element is editable, dead key causes composition events instead of keyboard events on Mac OS X). Also, like on other platforms, the value of {{domxref("KeyboardEvent.key")}} is now <code>"Dead"</code> for dead keypresses which don't generate text in other situations.</li>
 </ul>
 
