--- a/files/en-us/mozilla/firefox/releases/6/index.html
+++ b/files/en-us/mozilla/firefox/releases/6/index.html
@@ -141,7 +141,9 @@ tags:
 
 <p>For an overview of the changes you may need to make in order to make your add-on compatible with Firefox 6, see <a href="/en-US/docs/Mozilla/Firefox/Updating_add-ons_for_Firefox_6">Updating add-ons for Firefox 6</a>.</p>
 
-<div class="note"><strong>Note:</strong> Firefox 6 requires that binary components be recompiled, as do all major releases of Firefox. See <a href="/en-US/docs/Mozilla/Developer_guide/Interface_Compatibility#binary_interfaces">Binary Interfaces</a> for details.</div>
+<div class="note">
+  <p><strong>Note:</strong> Firefox 6 requires that binary components be recompiled, as do all major releases of Firefox. See <a href="/en-US/docs/Mozilla/Developer_guide/Interface_Compatibility#binary_interfaces">Binary Interfaces</a> for details.</p>
+</div>
 
 <h3 id="JavaScript_code_modules">JavaScript code modules</h3>
 
