--- a/files/en-us/mozilla/firefox/releases/7/updating_extensions/index.html
+++ b/files/en-us/mozilla/firefox/releases/7/updating_extensions/index.html
@@ -8,7 +8,8 @@ tags:
 ---
 <div>{{FirefoxSidebar}}</div><p>This article offers advice for add-on developers that want to update their extensions to work in Firefox 7. Fortunately, most of the changes are relatively minor in this release, and few add-ons should need significant changes to work in Firefox 7.</p>
 <div class="note">
-  <strong>Note:</strong> For a complete list of developer-related changes in Firefox 7, see <a href="/en-US/docs/Mozilla/Firefox/Releases/7">Firefox 7 for developers</a>.</div>
+  <p><strong>Note:</strong> For a complete list of developer-related changes in Firefox 7, see <a href="/en-US/docs/Mozilla/Firefox/Releases/7">Firefox 7 for developers</a>.</p>
+</div>
 <p>As always, you will need to <a href="/en-US/docs/Mozilla/Developer_guide/Interface_Compatibility#binary_interfaces">recompile any binary components</a> to make them compatible with Firefox 7.</p>
 <h2 id="XPCOM_changes_affecting_compatibility">XPCOM changes affecting compatibility</h2>
 <p>Most of the changes in this release are XPCOM interface removals, or removals of specific, obsolete APIs from interfaces.</p>
